fix overflow for sidebar

--- a/app/assets/stylesheets/sidenav.css
+++ b/app/assets/stylesheets/sidenav.css
@@ -19,6 +19,7 @@
     height: 100%;
     padding-top: 10px;
     padding: 20px;
+    overflow: auto;
   }
 
   .sidenav .right{
